checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000060942.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#32: 
sound/pci/hda/patch_via.c: In function 'patch_vt1718S':
          ^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#33: 
sound/pci/hda/patch_via.c:4951: error: expected expression before 'return'
          ^^^

WARNING:TYPO_SPELLING: 'HDA' may be misspelled - perhaps 'HAD'?
#35: 
Caused by commit eb7188cafcb7aa1419b8889494cdbd4e6a01da1c ("ALSA: HDA
                                                                  ^^^

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id 'eb7188cafcb7aa1419b8889494cdbd4e6a01da1c', maybe rebased or not pulled?
#35: 
Caused by commit eb7188cafcb7aa1419b8889494cdbd4e6a01da1c ("ALSA: HDA

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#38: 
sound/pci/hda/patch_via.c: In function 'patch_vt1716S':
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#39: 
sound/pci/hda/patch_via.c:5441: error: expected expression before 'return'
          ^^^

WARNING:TYPO_SPELLING: 'HDA' may be misspelled - perhaps 'HAD'?
#41: 
Caused by commit f3db423df84570c9950754a5771ad26f0111235f ("ALSA: HDA
                                                                  ^^^

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id 'f3db423df84570c9950754a5771ad26f0111235f', maybe rebased or not pulled?
#41: 
Caused by commit f3db423df84570c9950754a5771ad26f0111235f ("ALSA: HDA

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#44: 
sound/pci/hda/patch_via.c: In function 'patch_vt2002P':
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#45: 
sound/pci/hda/patch_via.c:5794: error: expected expression before 'return'
          ^^^

WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#47: 
Caused by commit 25eaba2f8a6877ba6f58197c4723c2433a316e09 ("ALSA: HDA VIA: Add VT2002P support").

WARNING:TYPO_SPELLING: 'HDA' may be misspelled - perhaps 'HAD'?
#47: 
Caused by commit 25eaba2f8a6877ba6f58197c4723c2433a316e09 ("ALSA: HDA VIA: Add VT2002P support").
                                                                  ^^^

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '25eaba2f8a6877ba6f58197c4723c2433a316e09', maybe rebased or not pulled?
#47: 
Caused by commit 25eaba2f8a6877ba6f58197c4723c2433a316e09 ("ALSA: HDA VIA: Add VT2002P support").

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#49: 
sound/pci/hda/patch_via.c: In function 'patch_vt1812':
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#50: 
sound/pci/hda/patch_via.c:6148: error: expected expression before 'return'
          ^^^

WARNING:TYPO_SPELLING: 'HDA' may be misspelled - perhaps 'HAD'?
#52: 
Caused by commit ab6734e7ea32e9f9cbe0f55eeddf4aa629ed1c3d ("ALSA: HDA VIA: Add VT1812 support").
                                                                  ^^^

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id 'ab6734e7ea32e9f9cbe0f55eeddf4aa629ed1c3d', maybe rebased or not pulled?
#52: 
Caused by commit ab6734e7ea32e9f9cbe0f55eeddf4aa629ed1c3d ("ALSA: HDA VIA: Add VT1812 support").

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#62: 
sound/pci/hda/patch_via.c: In function 'patch_vt1718S':
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#63: 
sound/pci/hda/patch_via.c:4951: error: expected expression before 'return'
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#64: 
sound/pci/hda/patch_via.c: In function 'patch_vt1716S':
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#65: 
sound/pci/hda/patch_via.c:5441: error: expected expression before 'return'
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#66: 
sound/pci/hda/patch_via.c: In function 'patch_vt2002P':
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#67: 
sound/pci/hda/patch_via.c:5794: error: expected expression before 'return'
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#68: 
sound/pci/hda/patch_via.c: In function 'patch_vt1812':
          ^^^

WARNING:TYPO_SPELLING: 'hda' may be misspelled - perhaps 'had'?
#69: 
sound/pci/hda/patch_via.c:6148: error: expected expression before 'return'
          ^^^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000060942.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 25 warnings, 0 checks, 32 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000060942.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
